src/main/java/com/example/springbootdemo/error/exceptions/UnclosedBugsException.java
package com.example.springbootdemo.error.exceptions;

public class UnclosedBugsException extends RuntimeException{
    public UnclosedBugsException(String msg){
        super(msg);
    }
}
